# noteguard-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-hf.yml
agent/: graph.py
api/: index.py  requirements.txt
app/: api.py  trust_panel.py
app/static/: index.html
docs/: CHANGELOG.md  architecture.md  plan.md  rap_compliance.md  report.md  tool_card.md  user_guide.md
eval/: run_eval.py
noteguard/: __init__.py  deid.py  retrieve.py
scripts/: fetch_dataset.py
src/: deid.py  fetch_dataset.py  retrieve.py
tests/: test_deid.py
workflows/: noteguard.n8n.json
